add autorun debug/start

--- a/public/index.html
+++ b/public/index.html
@@ -144,7 +144,7 @@
             <div class="col-38">
 
                 <div class="section-heading">
-                    <h1>Experience is in the Eyes of the Holder cl</h1>
+                    <h1>Experience is in the Eyes of the Holder 3000</h1>
                     <h2>This is try to test model of GIT</h2>
                 </div>
 
